apps/gym/src/app/(user)/weight/Weight.module.css
.container {
  display: flex;
  flex-flow: column;
  height: calc(100vh - 87px);  /* 87 is the height of the navbar + the padding*/
  max-height: 100vh;
}

.body {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
  flex-grow: 1;
  height: 100%;
  gap: 64px;
}

.add_btn_div {
  width: 100%;
  height: min-content;
  position: absolute;
  top: 20px;
  left: 10px;
}

